[gd_scene load_steps=11 format=3 uid="uid://degpypdmjjsul"]

[ext_resource type="Script" path="res://shop_stuff/shop_item.gd" id="1_tb8oi"]
[ext_resource type="Texture2D" uid="uid://cmxxnp5l6fpls" path="res://Inventory/inventorySlot.png" id="2_tg5g3"]
[ext_resource type="Texture2D" uid="uid://wy2w0ffh3r3s" path="res://assets/rodModel.png" id="3_a40af"]
[ext_resource type="Texture2D" uid="uid://dd5rxe37g1ree" path="res://assets/rodModelColor.png" id="4_bce5t"]
[ext_resource type="FontFile" uid="uid://dwvnucq3ajek6" path="res://fonts/a.ttf" id="4_pa33y"]
[ext_resource type="Texture2D" uid="uid://bqd63ntyrm16k" path="res://assets/icons/coin.png" id="5_b8gcr"]
[ext_resource type="Texture2D" uid="uid://cdfs8q8a0ft8e" path="res://shop_stuff/shop_assets/shopUIBuyButton.png" id="5_iiaso"]
[ext_resource type="FontFile" uid="uid://cdap55ercsuve" path="res://fonts/PixelatedEleganceRegular-ovyAA.ttf" id="6_g0khp"]

[sub_resource type="Theme" id="Theme_ymd5m"]
default_font = ExtResource("4_pa33y")
default_font_size = 6

[sub_resource type="Theme" id="Theme_e3irj"]
default_font = ExtResource("6_g0khp")
default_font_size = 4

[node name="ShopItemPanel" type="Panel"]
custom_minimum_size = Vector2(70, 100)
anchors_preset = -1
anchor_right = 0.109
anchor_bottom = 0.278
offset_right = -69.76
offset_bottom = -100.08
pivot_offset = Vector2(35, 50)
script = ExtResource("1_tb8oi")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 50)
texture = ExtResource("2_tg5g3")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect"]
custom_minimum_size = Vector2(70, 100)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 50)

[node name="Panel" type="Panel" parent="NinePatchRect/CenterContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(60, 90)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/CenterContainer/Panel"]
custom_minimum_size = Vector2(60, 90)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="NinePatchRect/CenterContainer/Panel/CenterContainer"]
layout_mode = 2

[node name="RodModel" type="Sprite2D" parent="NinePatchRect/CenterContainer/Panel/CenterContainer/Panel"]
position = Vector2(12, -17)
scale = Vector2(3, 3)
texture = ExtResource("3_a40af")

[node name="RodModelColor" type="Sprite2D" parent="NinePatchRect/CenterContainer/Panel/CenterContainer/Panel"]
position = Vector2(12, -17)
scale = Vector2(3, 3)
texture = ExtResource("4_bce5t")

[node name="RodPricePanel" type="Panel" parent="NinePatchRect/CenterContainer/Panel/CenterContainer/Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(28, 10)
layout_mode = 0
offset_left = -14.0
offset_top = 17.0
offset_right = 14.0
offset_bottom = 27.0

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/CenterContainer/Panel/CenterContainer/Panel/RodPricePanel"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.071
anchor_right = 0.429
anchor_bottom = 1.0
offset_left = 0.012
offset_right = -0.012001
texture = ExtResource("5_b8gcr")

[node name="Label" type="Label" parent="NinePatchRect/CenterContainer/Panel/CenterContainer/Panel/RodPricePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.964
anchor_bottom = 1.1
offset_right = 0.00799751
theme_override_fonts/font = ExtResource("6_g0khp")
theme_override_font_sizes/font_size = 6
text = "150"
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="NinePatchRect/CenterContainer/Panel/CenterContainer/Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = -16.0
offset_top = 30.0
offset_right = 16.0
offset_bottom = 47.0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_ymd5m")
text = "Buy"

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect/CenterContainer/Panel/CenterContainer/Panel/BuyButton"]
self_modulate = Color(0.153906, 0.564214, 0.47222, 1)
texture = ExtResource("5_iiaso")
centered = false

[node name="Label" type="Label" parent="NinePatchRect/CenterContainer/Panel/CenterContainer/Panel/BuyButton/Sprite2D"]
anchors_preset = -1
anchor_left = 0.094
anchor_top = 0.176
anchor_right = 0.937
anchor_bottom = 0.824
offset_left = -1.008
offset_top = 0.00799966
offset_right = 1.016
offset_bottom = -0.00800133
theme = SubResource("Theme_e3irj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Buy"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="NinePatchRect/CenterContainer/Panel/CenterContainer/Panel/BuyButton" to="." method="_on_buy_button_pressed"]
